<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/main_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include  layout="@layout/toolbar_layout"/>

        <LinearLayout
            android:id="@+id/element_header_caption_wrapper"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorOtherCaption">
            <TextView
                android:id="@+id/element_period_row_caption"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textSize="25sp"
                android:textColor="@color/colorElementValuesText"
                android:textAlignment="center"
                android:gravity="center"
                android:text="@string/period_row_caption"
                />
            <TextView
                android:id="@+id/element_sybmol_caption"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textSize="25sp"
                android:textColor="@color/colorElementValuesText"
                android:textAlignment="center"
                android:gravity="center"
                android:text="@string/symbol_caption"
                />
            <TextView
                android:id="@+id/period_row_caption"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textSize="25sp"
                android:textColor="@color/colorElementValuesText"
                android:textAlignment="center"
                android:gravity="center"
                android:text="@string/group_subgroup_caption"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/element_symbol_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/element_period_row"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".35"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="25sp"
                android:textColor="@color/colorElementValuesText"
                android:background="@color/colorElementValues"
                android:textAlignment="center"
                android:gravity="center"
                tools:text="4\\4"
                />
            <TextView
                android:id="@+id/element_symbol"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".40"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="25sp"
                android:textColor="@color/colorElementValuesText"
                android:background="@color/elementEnergyTypeS"
                android:textAlignment="center"
                android:gravity="center"
                tools:text="Ca"
                />
            <TextView
                android:id="@+id/element_group_subgroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".35"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="25sp"
                android:textColor="@color/colorElementValuesText"
                android:background="@color/colorElementValues"
                android:textAlignment="center"
                android:gravity="center"
                tools:text="II\\A"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/element_name_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
            android:id="@+id/element_current_lang_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="18sp"
            android:textColor="@color/colorElementValuesText"
            android:background="@color/elementEnergyTypeS"
            android:textAlignment="center"
            android:gravity="center"
            tools:text="Кальций"
            />
            <TextView
                android:id="@+id/element_latin_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="18sp"
                android:textColor="@color/colorElementValuesText"
                android:background="@color/elementEnergyTypeS"
                android:textAlignment="center"
                android:gravity="center"
                tools:text="Calcium"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorOtherCaption">
            <TextView
                android:id="@+id/element_atomic_weight_caption"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="14sp"
                android:textColor="@color/colorElementValuesText"
                android:background="@color/colorOtherCaption"
                android:textAlignment="center"
                android:gravity="center"
                android:text="@string/element_atomic_weight_caption"
                tools:text="Атомдық салмағы"
                />
            <TextView
                android:id="@+id/element_atomic_number_caption"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="14sp"
                android:textColor="@color/colorElementValuesText"
                android:background="@color/colorOtherCaption"
                android:textAlignment="center"
                android:gravity="center"
                android:text="@string/element_atomic_number_caption"
                tools:text="Реттік номері"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorElementValues">
            <TextView
                android:id="@+id/element_atomic_weight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="20sp"
                android:textColor="@color/colorElementValuesText"
                android:textAlignment="center"
                android:gravity="center"
                tools:text="40.875"
                />
            <TextView
                android:id="@+id/element_atomic_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="20sp"
                android:textColor="@color/colorElementValuesText"
                android:textAlignment="center"
                android:gravity="center"
                tools:text="20"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/element_configuration_caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="14sp"
                android:textColor="@color/colorElementValuesText"
                android:background="@color/colorOtherCaption"
                android:textAlignment="center"
                android:gravity="center"
                android:text="@string/element_configuration_caption"
                tools:text="Электрон конфигурацясы"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorElementValues">
            <TextView
                android:id="@+id/element_configuration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="20sp"
                android:textColor="@color/colorElementValuesText"
                android:textAlignment="center"
                android:gravity="center"
                tools:text="4s^2"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorOtherCaption">
            <TextView
                android:id="@+id/element_oxide_caption"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="14sp"
                android:textColor="@color/colorElementValuesText"
                android:background="@color/colorOtherCaption"
                android:textAlignment="center"
                android:gravity="center"
                android:text="@string/element_oxide_caption"
                tools:text="Жоғарғы оксиді"
                />
            <TextView
                android:id="@+id/element_volatile_hydrogenid_caption"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="14sp"
                android:textColor="@color/colorElementValuesText"
                android:background="@color/colorOtherCaption"
                android:textAlignment="center"
                android:gravity="center"
                android:text="@string/element_volatile_hydrogenid_caption"
                tools:text="Ұшқыш сутекті қосылыс"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorElementValues">
            <TextView
                android:id="@+id/element_oxide"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="20sp"
                android:textColor="@color/colorElementValuesText"
                android:textAlignment="center"
                android:gravity="center"
                tools:text="40.875"
                />
            <TextView
                android:id="@+id/element_volatile_hydrogenid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="20sp"
                android:textColor="@color/colorElementValuesText"
                android:textAlignment="center"
                android:gravity="center"
                tools:text="20"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorElementValues">
            <TextView
                android:id="@+id/element_valence_caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="20sp"
                android:textColor="@color/colorElementValuesText"
                android:background="@color/colorOtherCaption"
                android:textAlignment="center"
                android:gravity="center"
                android:text="@string/element_valence_caption"
                tools:text="Валенттілік"
                />
            <TextView
                android:id="@+id/element_valence_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="20sp"
                android:textColor="@color/colorElementValuesText"
                android:textAlignment="center"
                android:gravity="center"
                tools:text="II, IV"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorElementValues">
            <TextView
                android:id="@+id/element_electron_formula_caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="14sp"
                android:textColor="@color/colorElementValuesText"
                android:background="@color/colorOtherCaption"
                android:textAlignment="center"
                android:gravity="center"
                android:text="@string/electron_formula_caption"
                tools:text="Элементтің электрондық формуласы"
                />
            <TextView
                android:id="@+id/element_electron_formula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="14sp"
                android:textColor="@color/colorElementValuesText"
                android:textAlignment="center"
                android:gravity="center"
                android:maxLines="5"
                tools:text="1s^2; 2s^2 3p^2"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/element_energy_level_caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="14sp"
            android:maxLines="3"
            android:textColor="@color/colorElementValuesText"
            android:background="@color/colorOtherCaption"
            android:textAlignment="center"
            android:gravity="center"
            android:text="@string/element_energy_level_caption"
            tools:text="@string/pieChartCenterText"
            />
            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/chart"
                android:background="@color/colorElementValues"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="400dp"/>
    </LinearLayout>

</ScrollView>